--- a/public/case/app/ac1/index.html
+++ b/public/case/app/ac1/index.html
@@ -58,7 +58,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('image/1.jpg');"></div>
+                <div class="fill" style="background-image:url('image/1.jpg'); background-size: contain; background-repeat: no-repeat"></div>
             </div>
         </div>
 
