--- a/public/case/app/ac1/index.html
+++ b/public/case/app/ac1/index.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body>
+<body style="background-color: #ffffff">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -52,7 +52,7 @@
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <!-- <li data-target="#myCarousel" data-slide-to="0" class="active"></li> -->
         </ol>
 
         <!-- Wrapper for slides -->
