--- a/index.html
+++ b/index.html
@@ -302,7 +302,19 @@
                 </table>
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Cyrus Yeung 2016</p>
+                </div>
+            </div>
+        </footer>
+
     </div>
+
+
 </body>
 
 </html>
