--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <p>
                             <h5>Mobile: 6731 1218</h5>
                             <h5>Email: cyrusylh@gmail.com</h5>
-                            <h5>Address: Yuet Fu House 3515, <br>Tin Yuet Estate, <br>Tin Shui Wai, New Territories</h5>
+                            <h5>Address: Yuet Fu House 3515, <br>Tin Yuet Estate, <br>Tin Shui Wai,<br> New Territories</h5>
                         </p>
                     </td>
                 </tr>
