--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         </div>
 
         <!-- Footer -->
-        <footer>
+        <footer style="padding: 20px; margin-left: -10%">
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Cyrus Yeung 2016</p>
