--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 
             <div class="col-md-12">
-                <table class="table" style="background-color: #cccccc; color: #ffffff; padding: 5px">
+                <table class="table" style="background-color: #cccccc; color: #ffffff; padding: 5px;margin-bottom:0px">
                     <tr>
                         <td>
                             <table class="table">
