--- a/public/case/app/ac1/index.html
+++ b/public/case/app/ac1/index.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Treasure Fun
+                    Treasure Fun | 黃埔新天地 尋蹤奪寶
                 </h1>
             </div>
             <div class="col-xs-12">
@@ -87,7 +87,11 @@
                         <h4>Description</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>
+                            - Scan QR code collent stamp <br>
+                            - Exchange gift by admin input password <br>
+                            - 1 day can play 1 time only 
+                        </p>
                         <!-- <a href="#" class="btn btn-default">Learn More</a> -->
                     </div>
                 </div>
@@ -96,14 +100,6 @@
         <!-- /.row -->
 
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Cyrus Yeung 2016</p>
-                </div>
-            </div>
-        </footer>
 
     </div>
     <!-- /.container -->
