--- a/public/case/app/pong/index.html
+++ b/public/case/app/pong/index.html
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Treasure Fun
+                    PONG-Extreme
                 </h1>
             </div>
             <div class="col-xs-12">
@@ -95,23 +95,18 @@
                         <h4>Description</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                        <p>
+                            - connect 2 BLE devices same time (GATT - Read & Write) <br>
+                            - Control 2 BLE LED light effect and play sound <br>
+                            - Main mobile user will open hotspot connection other user to transfer 2 BLE devices data <br>
+                            - Facebook Login <br>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
 
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Cyrus Yeung 2016</p>
-                </div>
-            </div>
-        </footer>
 
     </div>
     <!-- /.container -->
