--- a/public/case/app/window/index.html
+++ b/public/case/app/window/index.html
@@ -80,7 +80,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Treasure Fun
+                     Checking window booking System
                 </h1>
             </div>
             <div class="col-xs-12">
@@ -89,23 +89,18 @@
                         <h4>Description</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                        <p>
+                            - GET and UPDATE data by http request API <br>
+                            - Save MySQLi by text asset <br>
+                            - Connect database by json <br>
+                            - Data match 
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
 
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Cyrus Yeung 2016</p>
-                </div>
-            </div>
-        </footer>
 
     </div>
     <!-- /.container -->
