--- a/public/case/game/monopoly/index.html
+++ b/public/case/game/monopoly/index.html
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Treasure Fun
+                    Monopoly | 大富翁
                 </h1>
             </div>
             <div class="col-xs-12">
@@ -103,23 +103,19 @@
                         <h4>Description</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                        <p>
+                            - UPDATE and GET data by http request json <br>
+                            - Save class <br>
+                            - Notification <br>
+                            - In-app purchase (iOS and Android) <br>
+                            - NGUI layout
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
 
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Cyrus Yeung 2016</p>
-                </div>
-            </div>
-        </footer>
 
     </div>
     <!-- /.container -->
