--- a/public/case/game/threekingdoms/index.html
+++ b/public/case/game/threekingdoms/index.html
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Treasure Fun
+                    激戰三國
                 </h1>
             </div>
             <div class="col-xs-12">
@@ -99,23 +99,20 @@
                         <h4>Description</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                        <p>
+                            - API request UPDATE and GET user data <br>
+                            - Notification IOS and Android <br>
+                            - NGUI Layout <br>
+                            - mulit touch control <br>
+                            - In-app purchase ( iOS and Android)
+                        </p>
                     </div>
                 </div>
-            </div>
+            </div> 
         </div>
         <!-- /.row -->
 
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Cyrus Yeung 2016</p>
-                </div>
-            </div>
-        </footer>
 
     </div>
     <!-- /.container -->
