--- a/public/case/game/vrrace/index.html
+++ b/public/case/game/vrrace/index.html
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Treasure Fun
+                    Real Feel VR Race
                 </h1>
             </div>
             <div class="col-xs-12">
@@ -103,8 +103,14 @@
                         <h4>Description</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                        <p>
+                            - Connect to custom BLE controller (GATT - read & write) <br>
+                            - Setup Google Card Board API value to customize mobile VR hardware <br>
+                            - Setup Google Card Board game scene camera <br>
+                            - Racing game rule <br>
+                            - Car physics <br>
+                            - UGUI layout
+                        </p>
                     </div>
                 </div>
             </div>
@@ -112,14 +118,7 @@
         <!-- /.row -->
 
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Cyrus Yeung 2016</p>
-                </div>
-            </div>
-        </footer>
+
 
     </div>
     <!-- /.container -->
