--- a/public/case/app/culltamap/index.html
+++ b/public/case/app/culltamap/index.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><i class="fa fa-fw fa-android"></i><i class="fa fa-fw  fa-apple"></i></a>
+                <a class="navbar-brand" href="index.html"><i class="fa fa-fw fa-android"></i><!--<i class="fa fa-fw  fa-apple"></i>--></a>
             </div>           
         </div>
         <!-- /.container -->
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Treasure Fun
+                    Cultamap | 文化地圖
                 </h1>
             </div>
             <div class="col-xs-12">
@@ -87,23 +87,17 @@
                         <h4>Description</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                        <p>
+                            - Google Map multi location <br>
+                            - Database connection <br>
+                            - Google Map v3 application 
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
 
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Cyrus Yeung 2016</p>
-                </div>
-            </div>
-        </footer>
 
     </div>
     <!-- /.container -->
