--- a/public/case/game/jump/index.html
+++ b/public/case/game/jump/index.html
@@ -80,19 +80,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Treasure Fun
+                    Sheep Jump
                 </h1>
-            </div>
-            <div class="col-xs-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4>Description</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
-                    </div>
-                </div>
             </div>
         </div>
         <!-- /.row -->
