--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <table class="table">
                     <tr>
                         <td>
-                            2015 December 1 - 
+                            2015 December 1 - Present
                         </td>
                         <td>
                             Project Manager / Game Designer, AppOne E-solution Limited
