--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
             <h2 class="text-center" style="background-color: #dddddd; color: #000000; padding: 10px">Curriculum Vitae</h2>
         </div>
         <div class="row">
-            <!--<table class="table">
+            <table class="table">
                 <tr>
                     <td>
                         <h2>Yeung Lok Hin - Cyrus</h2>
                         <h3>Game Developer & Designer</h3>
                     </td>
-                    <td>
+                    <!-- <td>
                         <p>
                             <h5>Mobile: 6731 1218</h5>
                             <h5>Email: cyrusylh@gmail.com</h5>
                             <h5>Address: Yuet Fu House 3515, <br>Tin Yuet Estate, <br>Tin Shui Wai,<br> New Territories</h5>
                         </p>
-                    </td>
+                    </td>-->
                 </tr>
-            </table>-->
+            </table>
         </div>
         <div class="row">
             <div class="col-md-12">
