--- a/index.html
+++ b/index.html
@@ -230,6 +230,31 @@
                                 </tr>
                             </table>
                         </td>
+						<td>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <td>
+                                            <h4><b>Software</b></h4>
+                                        </td>
+                                    </tr>
+                                </thead>
+                                <tr>
+                                    <td>3ds Max</td>
+                                    
+                                </tr>
+                                <tr>
+                                    <td>Unity 3D</td>
+                                   
+                                </tr>
+                                <tr>
+                                    <td>Android Studio</td>
+                                </tr>
+								<tr>
+                                    <td>Microsoft Office</td>
+                                </tr>
+                            </table>
+                        </td>
                         <td>
 
                             <table class="table">
