--- a/cv.html
+++ b/cv.html
@@ -208,7 +208,7 @@
                                 </tr>
                             </table>
                         </td>
-                        <td>
+                                               <td>
                             <table class="table">
                                 <thead>
                                     <tr>
@@ -230,7 +230,28 @@
                                 </tr>
                             </table>
                         </td>
-                        <td>
+						<td>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <td>
+                                            <h4><b>Software</b></h4>
+                                        </td>
+                                    </tr>
+                                </thead>
+                                <tr>
+                                    <td>3ds Max , Adobe AI , Adobe PS</td>
+                                    
+                                </tr>
+                                <tr>
+                                    <td>Unity 3D , Android Studio , cordova</td>
+                                   
+                                </tr>
+                                <tr>
+                                    <td>Microsoft Office</td>
+                                </tr>
+                            </table>
+                        </td>
 
                             <table class="table">
                                 <thead>
