--- a/index.html
+++ b/index.html
@@ -240,17 +240,14 @@
                                     </tr>
                                 </thead>
                                 <tr>
-                                    <td>3ds Max</td>
+                                    <td>3ds Max , Adobe AI , Adobe PS</td>
                                     
                                 </tr>
                                 <tr>
-                                    <td>Unity 3D</td>
+                                    <td>Unity 3D , Android Studio , cordova</td>
                                    
                                 </tr>
                                 <tr>
-                                    <td>Android Studio</td>
-                                </tr>
-								<tr>
                                     <td>Microsoft Office</td>
                                 </tr>
                             </table>
